syntax = "proto3";

package api.customer;

import "google/api/annotations.proto";

option go_package = "customer/api/customer;customer";

service Customer {
  rpc GetVerifyCode (GetVerifyCodeReq) returns (GetVerifyCodeResp) {
    option (google.api.http) = {
      get: "/customer/get-verify-code"
    };
  }

}

message GetVerifyCodeReq {
  string Telephone = 1;
};

message GetVerifyCodeResp {
  int32 Code = 1;
  string Message = 2;
  string Data = 3;
}